[package]
name = "eblemon-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
proconio = "0.5.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
scraper = "0.13"
thiserror = "2.0.11"
xmltree = "0.10"
